--- a/app/scss/main-sections/_header.scss
+++ b/app/scss/main-sections/_header.scss
@@ -14,7 +14,10 @@
     z-index: 99;
 
     &__logo {
-        max-width: 165px;
+        max-width: 105px;
+        @media (min-width: 360px) {
+            max-width: 165px;
+        }
         z-index: 2;
         &--img {
             width: 100%;
@@ -283,6 +286,7 @@
             perspective: 400px;
             overflow: hidden;
             padding-right: 100px;
+            white-space: nowrap;
             
             &::before {
                 content: attr(data-number);
