--- a/app/scss/main-sections/_header.scss
+++ b/app/scss/main-sections/_header.scss
@@ -138,6 +138,21 @@
             transform: translate(0%,0);
         }
 
+        &::before {
+            content: '';
+            position: fixed;
+            left: 50%; top: 0;
+            transform: translate(-50%,0);
+            width: min(1900px, 100%); height: 100%;
+            background: url("data:image/svg+xml,%3Csvg viewBox='0 0 1801 1875' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='0.5' y1='2.18557e-08' x2='0.499886' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='1800.5' y1='2.18557e-08' x2='1800.5' y2='1721.74' stroke='%23EBEBEB'/%3E%3Cline x1='910.5' y1='2.18557e-08' x2='910.5' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='455.5' y1='2.18557e-08' x2='455.5' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='1365.5' y1='2.18557e-08' x2='1365.5' y2='2617' stroke='%23EBEBEB'/%3E%3C/svg%3E%0A")
+            9px 0 / 98.8% repeat;
+            @media (min-width: 1440px) {
+                background: url("data:image/svg+xml,%3Csvg viewBox='0 0 1801 1875' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='0.5' y1='2.18557e-08' x2='0.499886' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='1800.5' y1='2.18557e-08' x2='1800.5' y2='1721.74' stroke='%23EBEBEB'/%3E%3Cline x1='910.5' y1='2.18557e-08' x2='910.5' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='455.5' y1='2.18557e-08' x2='455.5' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='1365.5' y1='2.18557e-08' x2='1365.5' y2='2617' stroke='%23EBEBEB'/%3E%3C/svg%3E%0A")
+                54px 0 / 94.5% repeat;
+            }
+            z-index: -1;
+        }
+
         transition: transform .5s ease-in-out;
 
         /* @include _992 {
@@ -237,7 +252,7 @@
         &._active &--decor-title {
             animation: fadeInRightTitle 0.3s ease-in-out 0.3s 1 normal forwards;
             @include _992 {
-                animation: fadeInRight 0.3s ease-in-out 0.3s 1 normal forwards;
+                animation: fadeInRight 0.3s ease-in-out 0.5s 1 normal forwards;
             }
         }
 
