--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -59,7 +59,7 @@ body {
         9px 0 / 98.8% repeat;
         @media (min-width: 1440px) {
             background: url("data:image/svg+xml,%3Csvg viewBox='0 0 1801 1875' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='0.5' y1='2.18557e-08' x2='0.499886' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='1800.5' y1='2.18557e-08' x2='1800.5' y2='1721.74' stroke='%23EBEBEB'/%3E%3Cline x1='910.5' y1='2.18557e-08' x2='910.5' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='455.5' y1='2.18557e-08' x2='455.5' y2='2617' stroke='%23EBEBEB'/%3E%3Cline x1='1365.5' y1='2.18557e-08' x2='1365.5' y2='2617' stroke='%23EBEBEB'/%3E%3C/svg%3E%0A")
-            54px 0 / 94.5% repeat;
+            47px 0 / 95% repeat;
         }
         z-index: -1;
     }
@@ -92,6 +92,7 @@ body {
     z-index: -1;
     font-weight: 900;
     font-size: 5rem;
+    user-select: none;
     @media (min-width: 450px) {
         font-size: 7rem;
     }
@@ -176,5 +177,49 @@ section {
         @include _992 {
             padding-bottom: 56px;
         }
+    }
+}
+
+.decor-line {
+    position: relative;
+    &::before {
+        content: '';
+        position: absolute;
+        left: -16px; top: 10px;
+        width: 4px; height: 15px;
+
+        @include _768 {
+            top: 19px;
+            width: 5px; height: 22px;
+        }
+        
+        @include _992 {
+            top: 30px;
+        }
+        
+        background: #2F554B;
+    }
+
+    &._center::before {
+        top: 50% !important;
+        transform: translate(0,-50%);
+    }
+}
+
+.info-elem {
+    cursor: help;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 32px; height: 32px;
+
+    background: #FFFFFF;
+    border: 1px solid #252525;
+    border-radius: 50%;
+
+    &._end {
+        align-self: end;
     }
 }
