--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,7 @@
 @import 'global';
 @import 'font';
 @import 'form';
+@import 'popup';
 
 @import 'main-sections/header';
 
@@ -20,6 +21,8 @@
 @import 'pages/person/articles';
 
 @import 'pages/form-page/form-page';
+
+@import 'pages/article/article';
 
 
 @import 'main-sections/footer';
