--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -14,21 +14,20 @@ body {
     flex-direction: column;
     
 
-    &._active {
+    &._active, &._popup-active {
         overflow: hidden;
         & .wrapper {
             margin-right: var(--width-scrollbar);
         }
-        //padding-right: var(--width-scrollbar);
-
-        & .header {
-            //padding-right: var(--width-scrollbar);
-        }
     }
 
-    &._popup-active {
+    &._blur .wrapper {
+        filter: blur(5px);
+    }
+
+    /* &._popup-active {
         overflow: hidden;
-    }
+    } */
     
 }
 
@@ -48,6 +47,8 @@ body {
 
     display: flex;
     flex-direction: column;
+
+    transition: filter .2s ease-in-out;
 
     &::before {
         content: '';
@@ -145,14 +146,43 @@ body {
 .btn {
     display: inline-block;
     
-    padding: 7px 15px;
+    padding: 15.5px 20px;
+    min-width: 214px;
 
-    background: var(--accent);
+    background: #212121;
+    border: 2px solid #212121;
     color: var(--white);
+    &._light {
+        color: #212121;
+        background: var(--white);
 
-    border-radius: 5px;
+        &:hover {
+            background: #ececec;
+            border-color: #212121;
+        }
+        
+        &:active {
+            background: #dddddd;
+            border-color: #212121;
+        }
+    }
 
-    transition: color .2s ease-in-out, background .2s ease-in-out;
+    font-weight: 700;
+    font-size: 1.25rem;
+    line-height: 175%;
+    text-align: center;
+
+    transition: background .2s ease-in-out, border-color .2s ease-in-out;
+
+    &:hover {
+        background: #3f3f3f;
+        border-color: #3f3f3f;
+    }
+    
+    &:active {
+        background: #131313;
+        border-color: #131313;
+    }
 }
 
 section {
@@ -222,4 +252,10 @@ section {
     &._end {
         align-self: end;
     }
+}
+
+.blur {
+    filter: blur(5px);
+    opacity: .15;
+    pointer-events: none;
 }
