--- a/app/scss/pages/countries/_countries.scss
+++ b/app/scss/pages/countries/_countries.scss
@@ -24,6 +24,11 @@
             margin: -16.5px;
         }
 
+        // .search__form--checkbox
+
+		&--checkbox {
+		}
+
         // .search__form--item
 
         &--item {
@@ -32,6 +37,9 @@
 
             @include _768 {
                 flex: 0 1 auto;
+                &._auto {
+                    flex: 1 1 auto;
+                }
             }
         }
 
@@ -44,6 +52,58 @@
             }
 
         }
+
+        // .search__form--input-wrapper
+
+		&--input-wrapper {
+            position: relative;
+		}
+
+		// .search__form--input
+
+		&--input {
+            width: 100%;
+            padding: 15px 40px 15px 14px;
+
+            background: #F0F0F0;
+            border: 1px solid #C9C9C9;
+            border-radius: 8px;
+
+            font-size: 1rem;
+            line-height: 133%;
+            color: #787878;
+
+            @include _768 {
+                padding: 22px 50px 22px 24px;
+                font-size: 1.125rem;
+            }
+
+            transition: color .2s ease-in-out;
+
+            &::placeholder {
+                opacity: 1;
+                color: #787878;
+
+                transition: opacity .2s ease-in-out;
+            }
+
+            &:focus {
+                color: var(--dark);
+                &::placeholder {
+                    opacity: 0;
+                }
+            }
+
+		}
+
+		// .search__form--input-icon
+
+		&--input-icon {
+            position: absolute;
+            right: 20px; top: 50%;
+            pointer-events: none;
+            transform: translate(0,-50%);
+		}
     }
 
     // .search__decor-text
@@ -155,6 +215,32 @@
         }
     }
 
+    // .search__block
+
+    &__block {
+        position: relative;
+    }
+
+    // .search__founded
+
+    &__founded {
+        position: absolute;
+        left: 0; top: 50px;
+        z-index: 2;
+
+        font-weight: 700;
+        font-size: 1.125rem;
+        @include _768 {
+            font-size: 1.5625rem;
+        }
+        line-height: 100%;
+        color: #252525;
+
+        & strong {
+            color: #CD2020;
+        }
+    }
+
     // .search__list
 
     &__list {
@@ -180,6 +266,8 @@
         @media(min-width: 1440px) {
             margin: -21.5px;
         }
+
+        transition: opacity .2s ease-in-out, filter .2s ease-in-out;
     }
 
     // .search__card
@@ -199,7 +287,7 @@
 
             min-height: 100%;
             @include _992 {
-                min-height: 228px;
+                min-height: 150px;
             }
 
             padding: 15px 10px 10px 15px;
@@ -236,6 +324,20 @@
         &--avatar {
             & img {
                 object-fit: cover;
+            }
+        }
+
+        &--icon {
+            width: 84px; height: 84px;
+            background: #FFFFFF;
+            border: 2px solid #212121;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            & img {
+                object-fit: contain;
             }
         }
 
